<?xml version="1.0"?>
<package format="3">
  <name>pcl_voxel_reduce</name>
  <version>0.0.0</version>
  <description>The pcl_voxel_reduce package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
</package>
